@@ -24,6 +24,7 @@ Mike Crowe <mac@mcrowe.com>
 John Muth <muth@parascale.com>
 Geoffrey McRae <geoff@spacevs.com>
 Piotr Grzybowski <narsil.pl@gmail.com>
+Gerrit Telkamp <g.telkamp@domologic.de>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
